--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.8.2"
+    "react-router-dom": "^7.8.2",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@types/react": "^19.0.2",
