--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
+    "native.js": "^0.0.3",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
