--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-phone-input-2": "^2.15.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
     "swiper": "^11.2.10"
