--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "react-lottie": "^1.2.10",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
     "swiper": "^11.2.10"
